--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -12,17 +12,20 @@ header {
 .highLink {
     grid-column: 1 / span 1;
     grid-row: 1 /span 1;
+    font-size: 20px;
     
 }
 
 .countName {
     grid-column: 4 / span 1;
     grid-row: 1 /span 1;
+    font-size: 20px;
 }
 
 .countNumber {
     grid-column: 5 / span 1;
     grid-row: 1 /span 1;
+    font-size: 20px;
 }
 
 main {
@@ -37,33 +40,53 @@ main {
     "main main main main main"
     "main main main main main"
     "main main main main main"
+    "main main main main main"
+    "main main main main main"
     "main main main main main";
 }
 
 .question {
     grid-column:1 / span 5;
-    grid-row: 1 / span 1;
+    grid-row: 1 / span 2;
+    font-size: 50px;
+}
+
+button {
+    color:white;
+    background-color:blue;
+    text-align: left;
+    border-radius: 12px;
+    margin: 10px;
+}
+
+button:hover {
+    background-color:cornflowerblue;
 }
 
 .a1 {
     grid-column:1 / span 1;
-    grid-row: 2 / span 1;  
+    grid-row: 3 / span 1;  
+    font-size: 25px;
 }
 .a2 {
     grid-column:1 / span 1;
-    grid-row: 3 / span 1;  
+    grid-row: 4 / span 1;
+    font-size: 25px;  
 }
 .a3 {
     grid-column:1 / span 1;
-    grid-row: 4 / span 1;  
+    grid-row: 5 / span 1;  
+    font-size: 25px;
 }
 .a4 {
     grid-column:1 / span 1;
-    grid-row: 5 / span 1;  
+    grid-row: 6 / span 1;  
+    font-size: 25px;
 }
 .correct {
     grid-column:1 / span 5;
-    grid-row: 6 / span 1;  
+    grid-row: 8 / span 2;  
+    font-size: 40px;
 }
 
 footer {
