--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,55 +1,26 @@
 header {
-    display: grid;
-    grid-template-columns: 200px 200px 200px 200px 200px;
-    grid-template-rows: 50px;
+    display: flex;
     justify-content: center;
     align-items: center;
-    grid-template-areas:
-    "header header header header header";
 }
 
 /* apply styles to <header> */
 .highLink {
-    grid-column: 1 / span 1;
-    grid-row: 1 /span 1;
+    flex: 1 0 300px;
     font-size: 20px;
     
 }
 
 .countName {
-    grid-column: 4 / span 1;
-    grid-row: 1 /span 1;
+    flex: 1 0 100px
     font-size: 20px;
 }
 
 .countNumber {
-    grid-column: 5 / span 1;
-    grid-row: 1 /span 1;
+    flex: 1 0 100px
     font-size: 20px;
 }
 
-main {
-    display: grid;
-    grid-template-columns: 200px 200px 200px 200px 200px;
-    grid-template-rows: 50px;
-    justify-content: center;
-    align-items: left;
-    grid-template-areas:
-    "main main main main main"
-    "main main main main main"
-    "main main main main main"
-    "main main main main main"
-    "main main main main main"
-    "main main main main main"
-    "main main main main main"
-    "main main main main main";
-}
-
-.question {
-    grid-column:1 / span 5;
-    grid-row: 1 / span 2;
-    font-size: 50px;
-}
 
 button {
     color:white;
@@ -64,28 +35,23 @@ button:hover {
 }
 
 .a1 {
-    grid-column:1 / span 1;
-    grid-row: 3 / span 1;  
+
     font-size: 25px;
 }
 .a2 {
-    grid-column:1 / span 1;
-    grid-row: 4 / span 1;
+
     font-size: 25px;  
 }
 .a3 {
-    grid-column:1 / span 1;
-    grid-row: 5 / span 1;  
+
     font-size: 25px;
 }
 .a4 {
-    grid-column:1 / span 1;
-    grid-row: 6 / span 1;  
+ 
     font-size: 25px;
 }
 .correct {
-    grid-column:1 / span 5;
-    grid-row: 8 / span 2;  
+
     font-size: 40px;
 }
 
