--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -127,3 +127,18 @@ footer {
     display: flex;
     justify-content: center;
 }
+
+.highScoreListC {
+    display: flex;
+    width: 100%;
+    max-width: 800px;
+    font-size: 25px;
+    justify-content: left;
+}
+
+.highScore {
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+}
+
